Mise à jour du référencement local

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       content="Découvrez le travail de Nina Carducci, une photographe talentueuse."
     />
     <meta property="og:image" content="./assets/images/new-nina-ad.webp" />
-    <meta property="og:url" content="URL du site web de Nina Carducci ici" />
+    <meta property="og:url" content="https://pisc09.github.io/nina/" />
     <meta property="og:type" content="website" />
 
     <!-- Balises pour Instagram -->
@@ -20,7 +20,7 @@
       content="Découvrez le travail de Nina Carducci, une photographe talentueuse."
     />
     <meta property="og:image" content="./assets/images/new-nina-ad.webp" />
-    <meta property="og:url" content="URL du site web de Nina Carducci ici" />
+    <meta property="og:url" content="https://pisc09.github.io/nina/" />
     <meta property="og:type" content="website" />
 
     <meta
@@ -59,6 +59,9 @@
       {
         "@context": "https://schema.org",
         "@type": "LocalBusiness",
+        "name": "Nina Carducci",
+        "image": "./assets/images/new-camera-ad.webp",
+        "priceRange": "50€ - 400€",
         "address": {
           "@type": "PostalAddress",
           "streetAddress": "68 avenue Alsace-Lorraine",
