--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
           <figcaption>L'artiste photographe Nina Carducci</figcaption>
         </figure>
         <div id="about-me">
-          <h2 class="about-me__title">À propos de moi</h2>
+          <h2 class="about-me__title">À propos de Nina Carducci</h2>
           <p class="about-me__introduction" style="font-size: 16px">
             Devenir photographe était pour moi une évidence. Comme si j'y étais
             prédestiné. Saisir un moment, une émotion, une situation, un
@@ -210,7 +210,7 @@
         </div>
       </section>
       <section id="gallery">
-        <h2 class="title">Portfolio</h2>
+        <h2 class="title">Moments Capturés : Un Éventail de Photographie</h2>
         <div class="container py-3">
           <div class="gallery" style="display: none">
             <img
@@ -294,11 +294,11 @@
         </div>
       </section>
       <section id="services">
-        <h2 class="title">Mes services</h2>
+        <h2 class="title">Services de Photographie Professionnelle</h2>
         <div class="container">
           <div class="service">
             <div class="service__description">
-              <h3>Shooting photo</h3>
+              <h3>Shooting Photo en Île-de-France</h3>
               <p>
                 Pour capturer vos moments les plus précieux et garder un
                 souvenir impérissable. Je me déplace en Île-de-France pour
@@ -312,7 +312,7 @@
           </div>
           <div class="service">
             <div class="service__description">
-              <h3>Retouches</h3>
+              <h3>Retouches Photo Professionnelles</h3>
               <p>
                 Vous souhaitez retoucher vos photos pour un résultat
                 professionnel ? Bénéficier d'un rendu optimal pour vos
@@ -326,7 +326,7 @@
           </div>
           <div class="service">
             <div class="service__description">
-              <h3>Album photos</h3>
+              <h3>Création d’Albums Photo Personnalisés</h3>
               <p>
                 Partagez avec vos proches et vos clients les photos des moments
                 partagés ensemble à travers un album photo personnalisé
@@ -354,22 +354,26 @@
       <section id="contact">
         <div class="container">
           <div class="form-container">
-            <h2>Une question ? Une demande de devis ?</h2>
+            <h2>
+              Pour toute question ou demande de devis personnalisé,
+              contactez-moi.
+            </h2>
             <p>
-              N'hésitez pas à m'écrire ! Je vous répondrais en moins de 24
-              heures
+              Vous avez une question sur nos services ou vous souhaitez obtenir
+              un devis personnalisé ? Contactez-nous ! Nous nous engageons à
+              vous répondre en moins de 24 heures.
             </p>
             <form action="#" method="post">
               <div>
-                <label for="nom">Nom :</label>
+                <label for="nom">Votre nom :</label>
                 <input type="text" id="nom" name="nom" required />
               </div>
               <div>
-                <label for="email">Email :</label>
+                <label for="email">Votre adresse email :</label>
                 <input type="email" id="email" name="email" required />
               </div>
               <div>
-                <label for="message">Message :</label>
+                <label for="message">Votre message :</label>
                 <textarea
                   id="message"
                   name="message"
@@ -379,7 +383,7 @@
                 ></textarea>
               </div>
               <div>
-                <input type="submit" value="Envoyer" />
+                <input type="submit" value="Envoyer votre demande" />
               </div>
             </form>
           </div>
@@ -396,8 +400,20 @@
     <footer>
       <p>Nina Carducci © 2024. Tous les droits sont réservés.</p>
       <ul>
-        <li>Instagram</li>
-        <li>Facebook</li>
+        <li>
+          <a
+            href="https://www.instagram.com/ninacarducci.photo/?hl=fr"
+            target="_blank"
+            >Instagram</a
+          >
+        </li>
+        <li>
+          <a
+            href="https://fr-fr.facebook.com/people/Nina-Carducci/pfbid0BauQFhr4U7XrVT79AQtZxdwQHEpWWySux2g59ZChnKM3GCF5LkXJCWXpxrYkVHVml/"
+            target="_blank"
+            >Facebook</a
+          >
+        </li>
         <li>Conditions</li>
       </ul>
     </footer>
